[gd_scene load_steps=5 format=3 uid="uid://dprhj8fin0gn2"]

[ext_resource type="Script" path="res://Componets/Battle_Mode_Component/battle_room_component/battle_room_componentSCRIPT.gd" id="1_oi0n1"]
[ext_resource type="Script" path="res://Componets/Battle_Mode_Component/battle_room_component/BattleManagerSCRIPT.gd" id="2_io7wu"]
[ext_resource type="PackedScene" uid="uid://cah64q314r7fm" path="res://Scenes/menu_GUI/player_gui_ui/gui_ui_control.tscn" id="3_moi1h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmisy"]
bg_color = Color(0, 0, 0, 0.498039)

[node name="battle_room_component" type="Node2D"]
script = ExtResource("1_oi0n1")
enemy_in_battle = Array[int]([-1, -1, -1])

[node name="BgPanel" type="Panel" parent="."]
offset_right = 1280.0
offset_bottom = 512.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tmisy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
enabled = false

[node name="EnemySpriteManager" type="Node2D" parent="."]

[node name="FirstSpriteEnemy" type="Sprite2D" parent="EnemySpriteManager"]
position = Vector2(757, 268)
scale = Vector2(0.2, 0.2)

[node name="EnemySlotManager" type="Node2D" parent="."]

[node name="FirstSlot" type="Marker2D" parent="EnemySlotManager"]
position = Vector2(757, 268)

[node name="BattleManager" type="Node2D" parent="."]
script = ExtResource("2_io7wu")

[node name="gui_ui_control" parent="." instance=ExtResource("3_moi1h")]
